if (LIBCPPTLS_BUILD_STATIC)  # prefer static
    set(LINKED_LIB cpptls)
    set(examples_compile_definitions LIBCPPTLS_STATIC)
elseif (LIBCPPTLS_BUILD_SHARED)
    set(LINKED_LIB cpptlsDyn ${ext_libs})
else()
    list(APPEND executable_srcs ${lib_srcs})
    set(LINKED_LIB ${ext_libs})
    set(examples_compile_definitions LIBCPPTLS_STATIC)
endif()
message(STATUS "Linked libraries to examples: ${LINKED_LIB}")
if (NOT WIN32)
    add_executable(TLS_client "tls_client.cpp")
    target_include_directories(TLS_client PUBLIC ${incl_dirs})
    target_link_libraries(TLS_client PRIVATE ${LINKED_LIB})
    target_compile_definitions(TLS_client PRIVATE ${examples_compile_definitions})
endif()

add_executable(test_sha "test_sha.cpp")
target_include_directories(test_sha PUBLIC ${incl_dirs})
target_link_libraries(test_sha PRIVATE ${LINKED_LIB})
target_compile_definitions(test_sha PRIVATE ${examples_compile_definitions})
